[gd_scene load_steps=12 format=3 uid="uid://cy3daaugnn180"]

[ext_resource type="Script" path="res://Game.gd" id="1_s0cd0"]
[ext_resource type="Theme" uid="uid://cq8prl3lt5y1y" path="res://Themes/main_theme.tres" id="2_jtwee"]
[ext_resource type="PackedScene" uid="uid://bo3irtp3tcnv2" path="res://GUI/pause_menu.tscn" id="3_s88ok"]
[ext_resource type="AudioStream" uid="uid://4acf1v8r2emv" path="res://Audio/snap.wav" id="4_erghs"]
[ext_resource type="AudioStream" uid="uid://b8hg5w8h4n0ll" path="res://Audio/merge_short.wav" id="4_iaiik"]
[ext_resource type="AudioStream" uid="uid://cuqvb804wfuvi" path="res://Audio/shift_long_reverbless.wav" id="6_2ro13"]
[ext_resource type="AudioStream" uid="uid://ba2n6bmuyqoqa" path="res://Audio/split_b_short.wav" id="6_tkdwj"]

[sub_resource type="Animation" id="Animation_o2tpm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_gctrs"]
resource_name = "fade_in_black"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_mj6ai"]
resource_name = "fade_out_black"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0qn34"]
_data = {
"RESET": SubResource("Animation_o2tpm"),
"fade_in_black": SubResource("Animation_gctrs"),
"fade_out_black": SubResource("Animation_mj6ai")
}

[node name="Game" type="Node2D"]
process_mode = 3
script = ExtResource("1_s0cd0")

[node name="Overlay" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="Overlay"]
offset_right = 1600.0
offset_bottom = 1200.0
mouse_filter = 2
color = Color(1, 1, 1, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Overlay"]
libraries = {
"": SubResource("AnimationLibrary_0qn34")
}

[node name="GUI" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="GUI"]
layout_direction = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_jtwee")

[node name="RightSideBar" type="VBoxContainer" parent="GUI/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_jtwee")

[node name="Control" type="Control" parent="GUI/HBoxContainer/RightSideBar"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="MoveMode" type="Label" parent="GUI/HBoxContainer/RightSideBar"]
layout_mode = 2
theme = ExtResource("2_jtwee")

[node name="PauseMenu" parent="GUI" instance=ExtResource("3_s88ok")]
layout_direction = 2

[node name="Audio" type="Node2D" parent="."]

[node name="Combine" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("4_iaiik")
volume_db = -2.0

[node name="Slide" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("4_erghs")
volume_db = -3.0

[node name="Split" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("6_tkdwj")
volume_db = -0.7

[node name="Shift" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("6_2ro13")
volume_db = -5.5

[connection signal="animation_finished" from="Overlay/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
